src/test/resources/arp/invalid/arp_perm_ternary.sil
field f : Int
field g : Int

method foo(x: Ref)
//:: ExpectedOutput(internal:feature.unsupported)
requires acc(x.f, write) && acc(x.g, (x.f == 4 ? none : 1/4) + (x.f > 0 ? rd : 1/4))
//:: ExpectedOutput(internal:feature.unsupported)
ensures acc(x.f, write) && acc(x.g, (old(x.f) == 4 ? none : 1/4) + (old(x.f) > 0 ? rd : 1/4))
ensures x.f == x.g + 1
{
    x.f := x.g + 1
}

method client(x: Ref)
requires acc(x.f, write) && acc(x.g, 1/2)
ensures acc(x.f, write) && acc(x.g, 1/2)
{
    x.f := 4
    x.g := 5
    foo(x)
    assert x.g == 5
    assert x.f == 6
}
